# martin-binance

./: .deepsource.toml  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PROXYAI.md  README.md  init.py  lgtm.yml  margin_req.txt  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  docker-image.yml  main.yml  python-publish.yml
.proxyai/checkpoints/0e4b5c49-4aaf-44ce-b9af-cb95b320c2e8/: f395ffe7-4057-449d-992e-f3fc3c8853d9
.proxyai/checkpoints/3fb2ef8f-bf9b-456f-aa25-b4930df09635/: 0594169e-c732-4fd5-afd2-d5b2dc003870
.proxyai/checkpoints/88dac4e6-15a7-46bf-ba33-c46f095055f8/: 4fb8df3a-90a7-4808-8989-87199f96e356
.proxyai/checkpoints/ab4bfe5a-dc35-4280-aa0f-3f0737d80428/: fefd141a-2f57-4b04-973c-c972432572c3
.run/: martin-binance-image.run.xml  martin-binance.run.xml
doc/: Model of logarithmic grid.ods
martin_binance/: __init__.py  binance_api.proto  binance_api_pb2.py  binance_api_pb2_grpc.py  binance_srv.py  binance_srv_cfg.toml  cli_0_BTCUSDT.py.template  cli_10_AAABBB.py  cli_10_AAABBB.py.template  cli_1_BTCUSDT.py.template  cli_2_AAABBB.py.template  cli_2_TESTBTCTESTUSDT.py.template  cli_3_BTCUSDT.py.template  cli_7_BTCUSDT.py  cli_7_BTCUSDT.py.template  client.py  db_utils.py  exchange_simulator.py  exchange_sym.py  executor.py  funds_rate.db  funds_rate_exporter.py  lib.py  margin_wrapper.py  ms_cfg.toml  ms_cfg.toml.template  params.py  strategy_base.py  telegram_utils.py
martin_binance/backtest/: OoTSP.py  VCoSEL.py  exchange_simulator.py  martin_view.py  optimizer.py
martin_binance/last_state/: .gitkeep
martin_binance/margin/: margin_req.txt  margin_req_win.txt
martin_binance/service/: .tmux.conf  funds_export.service  funds_rate_exporter.py  funds_rate_exporter_as.py  grafana.json  relaunch.py  relaunch.service  tlg-proxy.service  tmux.service
martin_binance/telegram_proxy/: tlg_client.py  tlg_proxy.proto  tlg_proxy.py
martin_binance/templates/: cli_0_ASLISTUSDT.py  cli_0_BTCUSDT.py  cli_1_BTCUSDT.py  cli_2_TESTBTCTESTUSDT.py  cli_3_BTCUSDT.py  ms_cfg.toml  trial_params.json
martin_binance/tlg/: __init__.py
uml/: OrderHendlerSellReverse.puml  architecture.puml
