[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "martin-binance"
authors = [{name = "Jerry Fedorenko", email = "jerry.fedorenko@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers=["Programming Language :: Python :: 3",
             "Development Status :: 5 - Production/Stable",
             "License :: OSI Approved :: MIT License",
             "Operating System :: Unix",
             "Operating System :: Microsoft :: Windows",
             "Operating System :: MacOS"]
dynamic = ["version", "description"]
requires-python = ">=3.12"

dependencies = [
    "exchanges-wrapper==2.1.46",
    "aiofiles==25.1.0",
    "aiocsv==1.4.0",
    "betterproto==2.0.0b7",
    "colorama==0.4.6",
    "dash==2.18.2",
    "inquirer==3.4.0",
    "jsonpickle==4.0.2",
    "libtmux==0.46.2",
    "numpy~=2.4.1",
    "optuna==4.7.0",
    "orjson~=3.11.6",
    "pandas==3.0.0",
    "plotly==6.0.0",
    "prometheus-client==0.24.1",
    "psutil==7.2.2",
    "pyarrow~=23.0.0",
    "requests==2.32.5",
    "schedule~=1.2.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "shortuuid~=1.0.13",
    "toml~=0.10.2",
    "tqdm==4.67.1",
    "ujson~=5.11.0"
]

[tool.flit.module]
name = "martin_binance"

[project.urls]
Source = "https://github.com/DogsTailFarmer/martin-binance"

[project.scripts]
martin-binance-init = "martin_binance.__init__:init"
martin-binance-backtest = "martin_binance.backtest.OoTSP:main"
