[build-system]
requires = ["flit_core >=3.12.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "martin-binance"
authors = [{name = "Jerry Fedorenko", email = "jerry.fedorenko@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers=["Programming Language :: Python :: 3",
             "Development Status :: 5 - Production/Stable",
             "License :: OSI Approved :: MIT License",
             "Operating System :: Unix",
             "Operating System :: Microsoft :: Windows",
             "Operating System :: MacOS"]
dynamic = ["version", "description"]
requires-python = ">=3.12"

dependencies = [
    "exchanges-wrapper==2.1.50post1",
    "aiofiles==25.1.0",
    "aiocsv==1.4.1",
    "apscheduler==3.11.2",
    "betterproto==2.0.0b7",
    "colorama==0.4.6",
    "dash==4.2.0",
    "inquirer==3.4.1",
    "jsonpickle==4.1.2",
    "libtmux==0.58.1",
    "numpy==2.4.6",
    "optuna==4.9.0",
    "orjson==3.11.9",
    "pandas==3.0.3",
    "plotly==6.8.0",
    "prometheus-client==0.25.0",
    "psutil==7.2.2",
    "pyarrow~=24.0.0",
    "pymannkendall==1.4.3",
    "requests==2.34.2",
    "schedule~=1.2.2",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "shortuuid~=1.0.13",
    "toml~=0.10.2",
    "tqdm==4.68.3",
    "ujson==5.12.1"
]

[tool.flit.module]
name = "martin_binance"

[project.urls]
Source = "https://github.com/DogsTailFarmer/martin-binance"

[project.scripts]
martin-binance-init = "martin_binance.__init__:init"
martin-binance-backtest = "martin_binance.backtest.OoTSP:main"
